--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,11 @@
          <h2 align="center">Root Component</h2>
        </div>
        <div class="card-body">
-         <book-list (bookid)=getBookId($event)></book-list>
+         <!--<book-list (bookid)=getBookId($event)></book-list>
          <search-book></search-book>
          <add-book></add-book>
-         <edit-book [bookid]="bookid"></edit-book>
+         <edit-book [bookid]="bookid"></edit-book>-->
+         <observable></observable>
        </div>
      </div>
 
