--- a/src/app/edit-book/edit-book.component.html
+++ b/src/app/edit-book/edit-book.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
       <div *ngIf="book">
       <p>
-        Book Id: <br/> {{bookid}}
+        Book Id: &nbsp; {{bookid}}
       </p>
       <p>
           Book Name:
