--- a/src/app/edit-book/edit-book.component.html
+++ b/src/app/edit-book/edit-book.component.html
@@ -9,21 +9,21 @@
       </p>
       <p>
           Book Name:
-          <input type="text" [(ngModel)]="book.bookname" value="{{book.bookname}}"/>
+          <input type="text" [(ngModel)]="book.Name" value="{{book.Name}}"/>
       </p>
   
       <p>
           Publisher
-          <input type="text" [(ngModel)]="book.publisher" value="{{book.publisher}}"/>
+          <input type="text" [(ngModel)]="book.Publisher" value="{{book.Publisher}}"/>
       </p>
   
       <p>
           Price
-          <input type="text" [(ngModel)]="book.price" value="{{book.price}}"/>
+          <input type="text" [(ngModel)]="book.Price" value="{{book.Price}}"/>
       </p>
   
       <p>
-            <img height="80px" width="80px" src="{{book.thumbnail}}"/><br/><br/>
+            <img height="80px" width="80px" src="{{book.Thumbnail}}"/><br/><br/>
           Thumbnail Image: (Choose image file)
 
           <input type="file" [(ngModel)]="thumbnail"/>
