--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -9,7 +9,8 @@
     
         <div class="card-heading">
              <h3 class="card-title navbar navbar-dark bg-primary" style="color: white">{{customer.firstName}} {{customer.lastName}}</h3>
-        </div>
+             <i class="fa fa-pencil-square-o"></i>
+            </div>
         
         <div class="card-body">
       
