--- a/src/app/customers/addcustomer/profile/profile.component.html
+++ b/src/app/customers/addcustomer/profile/profile.component.html
@@ -1,1 +1,27 @@
-<p>profile works!</p>
+<form #accountform="ngForm">
+    <!-- <div class="card card-primary">
+        <div class="card card-heading"><h2 class="card card-title">Login</h2><br></div>
+        <div class="card card-body"> -->
+
+<div class="form-group">
+    <label for="address">Address</label>
+    <input id="address" type="text" [(ngModel)]="address" name="address" class="form-control"><br>
+</div>
+
+<div class="form-group">
+        <label for="city">City</label>
+        <input id="city" type="text" [(ngModel)]="city" name="city" class="form-control"><br>
+</div>
+
+<div class="form-group">
+    
+    <label for="state">State</label>
+        <input id="state" type="text" [(ngModel)]="state" name="state" class="form-control"><br>
+
+</div>
+
+    <button type="button" class="btn btn-primary" (click)="previous()">previous</button>&nbsp;&nbsp;&nbsp;&nbsp;
+    <button type="button" class="btn btn-primary" (click)="next()">Next</button>
+ 
+    
+</form>
