--- a/src/app/customers/editcustomer/editcustomer.component.html
+++ b/src/app/customers/editcustomer/editcustomer.component.html
@@ -1,1 +1,62 @@
-<p>editcustomer works!</p>
+<div class="container">
+
+        <div class="card card-head">
+            <h2><i class='fa fa-edit' style="font-size:36px"></i>  Edit Customer</h2>
+        </div>
+
+       <div class="card card-body">
+
+            <form #accountform="ngForm" (ngSubmit)="edit()">
+
+            <h3>{{customer.firstName}} {{customer.lastName}}</h3>
+            <div class="form-group">
+                    <label for="fname">First Name</label>
+                    <input id="fname" type="text" [(ngModel)]="customer.firstName" name="fname" value="{{customer.firstName}}" class="form-control"><br>
+                </div>
+        
+                <div class="form-group">
+                        <label for="lname">Last Name</label>
+                        <input id="lname" type="text" [(ngModel)]="customer.lastName" name="lname" value="{{customer.lastName}}" class="form-control"><br>
+                </div>
+        
+                <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <br>
+                    <input id="gender" type="radio"  name="gender" [(ngModel)]="customer.gender" value="Male" class="form-check-input">
+                    <label class="form-check-label">Male</label><br>
+                    <input id="gender" type="radio" name="gender" [(ngModel)]="customer.gender" value="Female" class="form-check-input">
+                    <label class="form-check-label">Female</label>
+        
+                </div>
+
+                <div class="form-group">
+                        <label for="address">Address</label>
+                        <input id="address" type="text" [(ngModel)]="customer.address" name="address" value="{{customer.address}}" class="form-control"><br>
+                    </div>
+                    
+                    <div class="form-group">
+                            <label for="city">City</label>
+                            <input id="city" type="text" [(ngModel)]="customer.city" name="city" value="{{customer.city}}" class="form-control"><br>
+                    </div>
+                    
+                    <div class="form-group">
+                        
+                        <label for="state">State</label>
+                            <input id="state" type="text" [(ngModel)]="customer.state" name="state" value="{{customer.state}}" class="form-control"><br>
+                    
+                    </div>
+
+                    <label for="email">Email</label>
+                    <input id="email" type="email" [(ngModel)]="customer.email" name="email" value="{{customer.email}}" class="form-control" required><br>
+
+                    <button type="submit"  class="btn btn-success" value="submit">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button type="button" class="btn btn-danger" (click)="cancel()">Cancel</button>
+
+                </form>
+
+
+        </div>
+
+    
+</div>
+
